--- a/.classpath
+++ b/.classpath
@@ -50,9 +50,6 @@
 	<classpathentry kind="lib" path="lib/xpp3_min-1.1.4c.jar"/>
 	<classpathentry kind="lib" path="lib/xstream-benchmark-1.3.1.jar"/>
 	<classpathentry kind="lib" path="lib/spring-ws-2.1.0.RELEASE-all.jar"/>
-	<classpathentry kind="lib" path="lib/xerces-2.6.2.jar"/>
-	<classpathentry kind="lib" path="lib/xercesImpl.jar"/>
-	<classpathentry kind="lib" path="lib/xercesSamples.jar"/>
 	<classpathentry kind="lib" path="lib/junit-4.11-SNAPSHOT-20120805-1225.jar"/>
 	<classpathentry kind="lib" path="lib/ant-junit4.jar"/>
 	<classpathentry kind="lib" path="lib/ant-launcher.jar"/>
@@ -180,6 +177,9 @@
 	<classpathentry kind="lib" path="lib/org.aspectj.matcher.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/commons-fileupload-1.3.3.jar"/>
-	<classpathentry kind="lib" path="lib/vRules4j-3.3.6.b201907251012PM.jar"/>
+	<classpathentry kind="lib" path="lib/xerces-2.6.2.jar"/>
+	<classpathentry kind="lib" path="lib/xercesSamples.jar"/>
+	<classpathentry kind="lib" path="lib/xercesImpl-2.12.0.jar"/>
+	<classpathentry kind="lib" path="lib/vRules4j-3.4.0.b202004071102PM.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
