--- a/build.xml
+++ b/build.xml
@@ -6,7 +6,7 @@
 	<property name="jdk.version" value="1.6" />
 	<property name="project.name" value="cloudtest" />
 	<property name="version" value="1.7.0" />
-	<property name="src" location="src" />
+	<property name="src" location="src/main/java" />
 	<property name="build.dir" location="build" />
 	<property name="build.config.dir" location="build/config" />
 	<property name="classes.dir" location="classes" />
@@ -44,7 +44,7 @@
 		</javac>
 	</target>
 	<tstamp>
-		<format property="touch.time" pattern="yyyyMMddhhmmaa" locale="en" offset="0" unit="hour" />
+		<format property="touch.time" pattern="yyyyMMddHHmmss" locale="en" offset="0" unit="hour" />
 	</tstamp>
 	<target name="distribute" depends="compile" description="compile the source ">
 
