--- a/pom.xml
+++ b/pom.xml
@@ -217,7 +217,7 @@
 
 	</dependencies>
 	<build>
-		<finalName>${artifactId}-${version}-b${timestamp}</finalName>
+		<finalName>${artifactId}-${version}.b${timestamp}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
