--- a/pom.xml
+++ b/pom.xml
@@ -107,9 +107,9 @@
 		<dependency>
 			<groupId>com.unibeta</groupId>
 			<artifactId>vRules4j</artifactId>
-			<version>3.4.0.b20201110225127</version>
+			<version>3.4.1.b20210318221351</version>
 			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/vRules4j-3.4.0.b20201110225127.jar
+			<systemPath>${project.basedir}/lib/vRules4j-3.4.1.b20210318221351.jar
 			</systemPath>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/commons-lang/commons-lang -->
@@ -211,10 +211,12 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.11.2</version>
 		</dependency>
-
-
-
-
+		<!-- https://mvnrepository.com/artifact/com.google.googlejavaformat/google-java-format -->
+		<dependency>
+		    <groupId>com.google.googlejavaformat</groupId>
+		    <artifactId>google-java-format</artifactId>
+		    <version>1.7</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<finalName>${artifactId}-${version}.b${timestamp}</finalName>
